nats-micro/tests/ui/v2_state_mismatch.stderr
error: state reference does not match configured state `ExpectedState`
 --> tests/ui/v2_state_mismatch.rs:9:25
  |
9 |     async fn get(state: &WrongState) {
  |                         ^^^^^^^^^^^
